# shared-todos

./: .gitignore  .semgrepignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 380d8a29fa13_add_user_check_constraint_has_auth_.py  3b1c8c2d2bd0_add_refresh_tokens_and_session_family_id.py  4df1779548df_add_lists_items_shares.py  aaad963c469e_rename_sessions_token_to_token_hash.py  e741951e9b5f_initial_auth_schema.py
backend/app/: config.py  logging_config.py  main.py
backend/app/auth/: cookies.py  csrf.py  dependencies.py  email.py  oauth.py  password.py  rate_limiter.py  refresh_service.py  router.py  schemas.py  session.py  tokens.py
backend/app/authz/: dependencies.py  permissions.py
backend/app/db/: base.py
backend/app/items/: router.py  schemas.py
backend/app/lists/: router.py  schemas.py
backend/app/models/: item.py  list_.py  password_reset_token.py  refresh_token.py  session.py  share.py  user.py
backend/app/shares/: router.py  schemas.py
backend/semgrep-rules/: no-exception-in-except-tuple.py  no-exception-in-except-tuple.yml
backend/tests/: conftest.py  test_alembic_boots.py  test_app_boots.py
backend/tests/integration/: helpers.py  test_auth_register_login.py  test_authz_dependency.py  test_csrf.py  test_items.py  test_lists.py  test_logging.py  test_oauth.py  test_oq1_matrix.py  test_password_reset.py  test_rate_limit.py  test_refresh_token.py  test_register_response_body_shape_identical_anti_enum.py  test_session_token_hash.py  test_shares.py  test_user_check_constraint.py  test_v3_hardening.py
backend/tests/unit/: test_authz.py  test_config.py  test_cookies.py  test_logging_config.py  test_models.py  test_models_refresh_token.py  test_models_sharing.py  test_password.py  test_rate_limiter.py  test_refresh_service.py  test_session_service.py  test_timing_invariant.py  test_tokens.py
meta-reports/: initiative-findings-through-pr2.md
scripts/: preflight.sh
(+40 files in other folders)
