[project]
name = "backend"
version = "0.1.0"
description = "Shared todos backend"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.2",
    "fastapi==0.115.12",
    "psycopg==3.2.9",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "ruff==0.11.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "RET", "SIM", "TCH"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
